added wikipedia page views, deleted files for functions I no longer want to be in the final package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,38 +5,23 @@ export(EOLCommonNameScrapeR)
 export(EOLDeduplicate)
 export(EOLSciNameScrapeR)
 export(EOLUrlScrapeR)
-export(IOCAltnames)
-export(IOCCurrentVer)
-export(IOCDownload)
-export(IOCFormat)
-export(IOCSpeciesNames)
-export(WoSHits)
-export(WoSSearch)
-export(checkExportMessage)
-export(closeRemDr)
 export(createGoogleUrls)
 export(createSearchTerms)
-export(findAndClick)
-export(fixNamesWithBrackets)
 export(formatIUCN)
 export(formatIUCNCommonNames)
 export(formatIUCNDirectory)
 export(formatIUCNSynonyms)
-export(getElementText)
-export(getIOCNames)
 export(googleQuery)
 export(googleSearchTerms)
-export(importRefs)
-export(keysToSearchBox)
-export(removeDuplicatedNames)
-export(splitWikiScrape)
-export(textListToTibble)
+export(wikiPageViews)
 export(wikiScrapeR)
 import(RSelenium)
 import(dplyr)
+import(jsonlite)
 import(magrittr)
 import(stringi)
 import(stringr)
+importFrom(lubridate,days_in_month)
 importFrom(magrittr,"%>%")
 importFrom(readr,read_csv)
 importFrom(tidyr,separate_rows)
